--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 app.datasource.url=jdbc:mysql://localhost:3306/pingpong
 app.datasource.username=root
-app.datasource.password=pingpong
+app.datasource.password=root
